--- a/assets/css/style.css
+++ b/assets/css/style.css
@@ -8,7 +8,7 @@ Fecha: 25/07/2025
    VARIABLES CSS
 ======================================== */
 :root {
-    --color-primary: #F8FB60;      /* Amarillo principal */
+    --color-primary: #F5F910;      /* Amarillo principal */
     --color-secondary: #727476;    /* Gris */
     --color-dark: #000000;         /* Negro */
     --color-white: #ffffff;
