Agrego cookie de sesión

--- a/assets/css/index.css
+++ b/assets/css/index.css
@@ -200,8 +200,8 @@
 }
 
 .form-check-input:checked {
-    background-color: #F8FB60;
-    border-color: #F8FB60;
+    background-color: #28a745;
+    border-color: #28a745;
 }
 
 .form-check-label {
